app/src/index.css
@import "../node_modules/material-components-web/dist/material-components-web.css";

:root {
  --mdc-theme-primary: #009688;
  --mdc-theme--background: #00212B;
  --mdx-theme--accent: #009688;
  --editor-background: #002B36;
}

body {
  margin: 0;
  padding: 0;
}

main {
  padding: 0 !important;
  height: 100vh;
}

#logo {
  margin-right: -24px;
}

.mdc-snackbar {
  z-index: 2;
}

sidebar {
  background: #00212B;
  z-index: 1;
  position: absolute;
  left: 0;
  top: 0;
  height: 100vh;
  width: 40vw;
}

sidebar > .content {
  padding: 20px 20px 0 20px;
  display: flex;
  flex-direction: column;
}

sidebar .mdc-switch {
  margin-top: 30px;
}

sidebar .source-dest > .mdc-select {
  width: 40% !important;
}

/* Get open menu above Ace red cursor */
sidebar .mdc-simple-menu--open {
  z-index: 1000;
}

#tab-bar-tabs {
  display: none;
  width: 100%;
  margin-top: 10px;
}

#button-parent {
  margin-top: calc(100vh - 250px);
}

#button-parent button {
  float: right;
  margin-top: 2px;
}

.cli-hint {
  color: white;
  float: left;
}

.cli-hint p {
  color: white;
  opacity: 0.5;
  margin: 0 0 4px 0;
  font-size: 11pt;
}

.cli-hint pre {
  margin: 0;
  opacity: 0.8;
  font-family: Consolas, Menlo, monospace;
}

sidebar .mdc-select:first-child {
  margin-right: 20px;
}

#json-editor {
  z-index: 2;
  font-size: 10pt;
  border-radius: 3px;
  width: calc(40vw - 40px) !important;
  top: 200px;
  left: 20px;
  height: calc(100vh - 290px) !important;
}

#json-editor.mobile {
  height: calc(100vh - 340px) !important;
}

#button-parent.mobile {
  margin-top: calc(100vh - 310px);
}

#output-editor {
  position: absolute;
  z-index: 0;
  width: 60vw !important;
  left: 40vw;
  top: 0;
  margin: 0;
  font-family: Consolas, Menlo, monospace;
  height: 100vh !important;
}

#output-editor .ace_gutter {
  color: black;
  opacity: 0.3;
  background: white;
}

@media (min-width: 1440px) {
  sidebar {
    width: 600px;
  }
  #json-editor {
    width: calc(600px - 40px) !important;
  }
  #output-editor {
    width: calc(100vw - 600px);
    left: 600px;
  }
}

@media (max-width: 1000px) {
  sidebar {
    width: 50vw;
  }
  #json-editor {
    width: calc(50vw - 40px) !important;
  }
  #output-editor {
    width: 50vw;
    left: 50vw;
  }
}

@media (max-width: 800px) {
  .cli-hint,  #entry-toplevel, #button-parent {
    display: none;
  }
  sidebar {
    width: 100vw;
    height: 175px;
  }
  #output-editor {
    top: 174px;
    left: 0 !important;
    width: 100vw !important;
    height: calc(100vh - 174px) !important;
  }
  #json-editor, #json-editor.mobile {
    z-index: 0;
    margin: 0 0 0 -20px;
    top: 174px;
    border-radius: 0;
    width: 100vw !important;
    height: calc(100vh - 174px) !important;
  }
  #tab-bar-tabs {
    display: table;
  }
  sidebar .source-dest > .mdc-select {
    width: calc(50% - 34px) !important;
  }
}

@media (max-width: 600px) {
  sidebar {
    height: 167px;
  }
  #output-editor {
    top: 167px;
    height: calc(100vh - 167px) !important;
  }
  #json-editor, #json-editor.mobile {
    top: 167px;
    height: calc(100vh -  167px) !important;
  }
}

